# Supply-Chain-Compensation-Analysis-with-NLP

./: README.md
data-ingestion/: .gitignore  event_payload.json  main.py  pyproject.toml  requirements.txt
data-ingestion/modules/: gcs.py  handler.py
raw_data/: replies.txt
